<resources>
    <string name="app_name">GitCracking</string>
    <string name="gitcracking_repo">https://github.com/kaczmarkiewiczp/GitCracking</string>
    <string name="github_login">Login with your GitHub username and password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="network_connection_error">It seems that you have no internet connection.\nDid you forget to pay your bill?</string>
    <string name="loading_failed">Failed to retrieve data from GitHub</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="no_repositories">You don\'t have any repositories</string>
    <string name="no_pull_requests">You don\'t have any pull requests</string>
    <string name="no_issues">You don\'t have any issues</string>
    <string name="no_followers">You don\'t have any followers</string>
    <string name="no_following">You\'re not following anyone</string>
    <string name="no_news_feed">Your news feed is empty</string>
    <string name="title_activity_issues">Issues</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_icon">User Icon</string>
    <string name="location_pin">Location pin</string>
    <string name="pull_request_count">Pull Request count</string>
    <string name="issues_count">Issues count</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date_optional">Due date (optional)</string>
    <string name="new_label_name">New label name</string>
    <string name="color_pallete">Choose color</string>
    <string name="label_default_color">#FF5722</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="select_repository">Select repository</string>
    <string name="select_labels">Select labels</string>
    <string name="select_milestone">Select milestone</string>
    <string name="select_assignee">Select assignee</string>
    <string name="dot">⋅</string>
    <string name="and">and</string>
    <string name="conflicts">Conflicts</string>
    <string name="refresh">refresh</string>
    <string name="issues">Issues</string>
    <string name="pulls">Pulls</string>
    <string name="forks">Forks</string>
    <string name="readme">README</string>
    <string name="slash">/</string>
    <string name="dash">-</string>
    <string name="please_provide_username">Please provide your username</string>
    <string name="please_provide_password">Please provide your password</string>
    <string name="user_already_exists">User already exists</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_failed">Login Failed</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="github_reset_password_url">https://github.com/password_reset</string>
    <string name="authenticating">Authenticating</string>
    <string name="please_wait">Please wait…</string>
    <string name="pick_color">Pick color</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_label">Create new Label</string>
    <string name="label_name_cannot_be_empty">Label name cannot be empty</string>
    <string name="create_new_milestone">Create new Milestone</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="dashboard">Dashboard</string>
    <string name="issue_number">Issue #</string>
    <string name="new_comment">New Comment</string>
    <string name="comment_cant_be_empty">Comment can\'t be empty</string>
    <string name="comment">Comment</string>
    <string name="no_milestone_option">---NO MILESTONE---</string>
    <string name="update">Update</string>
    <string name="new_milestone">New Milestone</string>
    <string name="milestone_created">Milestone created</string>
    <string name="no_assignee_option">---NO ASSIGNEE---</string>
    <string name="new_label">New Label</string>
    <string name="label_created">Label created</string>
    <string name="opened_this_issue">opened this issue</string>
    <string name="edit_comment">Edit comment</string>
    <string name="submit">Submit</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_this_comment">Delete this comment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_issue_title">Edit Issue #</string>
    <string name="issue_title">Issue title</string>
    <string name="optional_issue_description">Optional issue description</string>
    <string name="edit_issue">Edit issue</string>
    <string name="comment_created">Comment created</string>
    <string name="comment_edited">Comment edited</string>
    <string name="comment_removed">Comment removed</string>
    <string name="created_tab">CREATED</string>
    <string name="assigned_tab">ASSIGNED</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_delete_user">Are you sure you want to remove this user?</string>
    <string name="new_issue">New Issue</string>
    <string name="you_have_to_select_a_repository">You have to select a repository</string>
    <string name="loading_repositories">Loading Repositories</string>
    <string name="select">Select</string>
    <string name="select_repository_first">Select repository first</string>
    <string name="getting_labels">Getting labels</string>
    <string name="getting_milestones">Getting Milestones</string>
    <string name="getting_collaborators">Getting collaborators</string>
    <string name="creating_new_issue">Creating new issue</string>
</resources>
