<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kaczmarkiewiczp.gitcracking.NewIssue">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppThemeNoActionBar.PopupOverlay" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_select_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                style="?android:attr/spinnerStyle"
                android:text="@string/select_repository"
                tools:text="Select repository" />

            <EditText
                android:id="@+id/et_new_issue_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:maxLines="2"
                android:inputType="textMultiLine"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/et_new_issue_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leave_a_comment"
                android:minLines="2"
                android:maxLines="8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_label_outline_black_24dp"
                    android:layout_gravity="center_vertical" />

                <Button
                    android:id="@+id/btn_select_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    style="?android:attr/spinnerStyle"
                    android:text="@string/select_labels"
                    tools:text="Select labels" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_milestone" />

                <Button
                    android:id="@+id/btn_select_milestone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:clickable="true"
                    style="?android:attr/spinnerStyle"
                    android:text="@string/select_milestone"
                    tools:text="Select milestone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person_outline_black_24dp"/>

                <Button
                    android:id="@+id/btn_select_assignee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:clickable="true"
                    style="?android:attr/spinnerStyle"
                    android:text="@string/select_assignee"
                    tools:text="Select assignee" />
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
