<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppThemeNoActionBar.PopupOverlay" />

    <EditText
        android:id="@+id/et_milestone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:minLines="1"
        android:maxLines="3"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/et_milestone_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:minLines="2"
        android:maxLines="10"
        android:hint="@string/description" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="24dp">
    <TextView
        android:id="@+id/tv_milestone_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/due_date_optional"
        tools:text="Due date (optional)"/>
        <ImageButton
            android:id="@+id/iv_clear_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_cancel_black_24dp"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>
</LinearLayout>