<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:text="@string/github_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login_text"
        tools:text="@string/github_login"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:inputType="none"
        android:ems="10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="176dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_text" />

    <EditText
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:id="@+id/et_password"
        android:hint="@string/password_hint"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:text="Login"
        android:id="@+id/btn_login"
        android:elevation="0dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:onClick="loginButtonClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
</ScrollView>